--- a/canvas.html
+++ b/canvas.html
@@ -1,10 +1,10 @@
-<canvas id="can1" width="800" height="600"></canvas>
+<canvas id="can1" width="800" height="580"></canvas>
 <script type="text/javascript">
   var can1 = document.getElementById("can1"); // 获取一个元素
   var ctx = can1.getContext("2d");
   nums = [268, 1236, 1273, 1545, 1988]; // 定义数据
   datas = ["路口一", "路口二", "路口三", "路口四", "路口五"]; // 定义横坐标内容
-  var cols = (can1.width - 50) / nums.length; // 柱子的个数，逐个柱子占位宽度和间距共90
+  var cols = (can1.width - 150) / nums.length - 30; // 柱子的个数，逐个柱子占位宽度和间距共90
   var colGaps = 20; //定义柱状图宽度
 
   //画出坐标线
@@ -27,13 +27,21 @@
       //终止坐标
       var numsNY = 550 - (nums[i + 1] / 500) * 100; // 终止坐标就是下一个起始坐标
       var numsNX = (i + 1) * 100 + 150;
+      var numsBY =
+        numsY -
+        Math.sqrt(10 * 10 + 10 / (150 / Math.abs(nums[i] - nums[i + 1]))); // 左下角  左上角的纵坐标-根号下（线条宽度的平方+线条的宽度 / (间距/相邻两个值的差)）
+      var numsDY =
+        numsNY -
+        Math.sqrt(10 * 10 + 10 / (150 / Math.abs(nums[i] - nums[i + 1]))); // 右下角
       ctx.beginPath();
       ctx.moveTo(numsX, numsY); // 定义开始的坐标
+      ctx.lineTo(numsX, numsBY);
+      ctx.lineTo(numsNX, numsDY);
       ctx.lineTo(numsNX, numsNY); // 定义线条结束坐标
-      ctx.lineWidth = 10;
-      ctx.strokeStyle = "#80aa33";
+      ctx.lineTo(numsX, numsY);
+      ctx.fillStyle = "#80aa33";
       ctx.closePath();
-      ctx.stroke();
+      ctx.fill();
     }
   }
   //绘制折线数值，横坐标值，纵坐标值
@@ -71,18 +79,19 @@
       ctx.beginPath();
       // rect 四个值分别代表了矩形左上角横坐标，左上角纵坐标，宽度，高度
       ctx.rect(
-        (i + 1) * cols,
-        can1.height - (nums[i] / 500) * 100 - 50,
+        (i + 1) * cols + 50,
+        can1.height - (nums[i] / 500) * 100,
         colGaps,
         nums[i]
-      ); //横坐标为90的倍数，纵坐标为画布高度减去柱子高度
+      ); // 横坐标为90的倍数，纵坐标为画布高度减去柱子高度
       ctx.fill();
-      ctx.closePath();
+      ctx.globalAlpha = 1;
       ctx.stroke();
     }
   }
-  drawRects();
+
   drawBorder();
   drawLine();
+  drawRects();
   drawBlock();
 </script>
