--- a/SVG.html
+++ b/SVG.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+
 </head>
 <style>
   svg line {
@@ -59,6 +60,13 @@
       <circle cx="380" cy="140" r="8" stroke="rgba(63,195,113,0.4)" stroke-width="1" fill="none" />
     </g>
   </svg>
+  <svg>
+    <rect x="15" y="15" width="40" height="40" fill="red">
+      <set attributeName="fill" to="blue" begin="click" />
+    </rect>
+  </svg>
+
+
 </body>
 
 </html>
